@@ -5,6 +5,8 @@ version 1.1:
 	- gpomme: added theme selection; use -t theme_name to select the
 	theme to use.
 	- gpomme: added the Tango theme provided by Daniel G. Siegel.
+	- gpomme: added multiple head support, based on a patch by Eduardo
+	Bellido Bellido.
 
 version 1.0:
 	- Renamed to pommed in anticipation of the PowerBook support
